src/docs/MA_dot2/HT_UseExternalScreen/es/1.1/index.md
---
originalUrl: 'https://help2.malighting.com/Page/MA_dot2/HT_UseExternalScreen/es/1.1'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option selected="selected" value="3">1.1</option>
<option value="7">1.2</option>
<option value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="49aea094-73e9-4037-b417-b1092ebd9eaa">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_UseMidiAndMSC/es/1.1'; " title="Go to previous page 'Use MIDI and MIDI Show Control (MSC)'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_ResettheConsole/es/1.1';" title="Go to next page 'Resetear la consola'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

					<div class="infobox"><b>Hint:</b><br><b>New help version</b><br>The help version you selected belongs to an older software version. <a href="/Topic/SetCurrentVersionNumber/29/49aea094-73e9-4037-b417-b1092ebd9eaa">You may want to view the latest help version.</a></div>

			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/13945/3'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 1.1</span>
			</div>
		<h1>Cómo usar la pantalla externa</h1>


		<p>Puedes conectar una pantalla externa con un conector DVI. La salida DVI desde la dot2 es una salida digital solamente. Esto significa que no puedes conectar un DVI a un adaptador VGA y conectar una pantalla VGA. Necesita ser una pantalla digital con un conector DVI.</p>

<div class="restriction">Es muy importante saber que puedes dañar seriamente la consola dot2 si conectas o desconectas una pantalla DVI mientras el dispositivo se encuentra encendido. Solamente conecta o desconecta la pantalla cuando la consola dot2 está apagada.</div>

<p>La dot2 registra la resolución de la pantalla y usa la resolución óptima.</p>

<p>La pantalla externa puede ser una pantalla táctil. La dot2 está diseñada para esto.</p>

<p>Una vez que la pantalla está conectada, puedes encender la consola. Entonces puedes presionar la tecla&nbsp;<span class="hardkey">Setup</span>&nbsp;y luego&nbsp;<span class="softkey">Seleccionar vistas pantalla externa</span>. Se muestra de esta manera:</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_SelectViewExternal01_1-1-3.png"><br>
<br>
<em>Figure 2: Seleccionar Vista para pantalla externa</em></p>

<p>&nbsp;</p>

<p>En el lado izquierdo puedes elegir qué disposición de pantalla te gusta. Puedes visualizar las diferentes disposiciones en la parte superior derecha. En la parte inferior derecha puedes seleccionar una vista en las diferentes áreas de la disposición. Esto puede que cierre la vista.</p>

<p>Pero esto se puede hacer también directamente en la pantalla externa.</p>

<p>Pulsa (o usa un ratón para hacer click) en una de las áreas en la pantalla y luego selecciona una vista diferente en la Barra Vista en el lado derecho de la pantalla externa. La Barra Vista de la pantalla externa se muestra así:</p>

<p>&nbsp;</p>

<p><img alt="" src="/Media/Image/Dot2_HT_UseExternalScreen_01_1-1-3.png"><br>
<br>
<em>Figura 2: Barra lateral derecho en pantalla externa.</em></p>

<p>&nbsp;</p>

<p><span class="softkey">More...</span> abre la Vista “Seleccionar vistas pantalla externa” en la pantalla externa.</p>

<p>&nbsp;</p>


				<br>
<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option selected="selected" value="3">1.1</option>
<option value="7">1.2</option>
<option value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="49aea094-73e9-4037-b417-b1092ebd9eaa">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_UseMidiAndMSC/es/1.1'; " title="Go to previous page 'Use MIDI and MIDI Show Control (MSC)'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_ResettheConsole/es/1.1';" title="Go to next page 'Resetear la consola'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/13945/3';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
